Finish prayer logic

--- a/views/overlays/emotes.pug
+++ b/views/overlays/emotes.pug
@@ -2,6 +2,10 @@ extends ./base
 
 block head_scripts
   script(src="/static/vendor/floating/floating.js")
-  script(src="/static/scripts/emotes-client.js")
+  script(src="/static/scripts/helpers.js")
+  script(src="/static/scripts/emotes.js")
+  script(src="/static/scripts/prayers.js")
+  script(src="/static/scripts/poll-client.js")
 
-
+block body_scripts
+  script(src="/static/scripts/overlays-client.js")
